# serializer version: 1
# name: test_dataframe_api_using_index_values
  '''
  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ METADATA:                                                                                                                                                                        │
  │ * version: 0.1.2                                                                                                                                                                 │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ ┌──────────────────────────────────┬───────────────────────────────┬─────────────────────────────────────────────────────┬─────────────────────────────────────────────────────┐ │
  │ │ rerun_segment_id                 ┆ time_1                        ┆ /obj1:Points3D:positions                            ┆ /obj2:Points3D:positions                            │ │
  │ │ ---                              ┆ ---                           ┆ ---                                                 ┆ ---                                                 │ │
  │ │ type: Utf8                       ┆ type: nullable Timestamp(ns)  ┆ type: nullable List[nullable FixedSizeList[f32; 3]] ┆ type: nullable List[nullable FixedSizeList[f32; 3]] │ │
  │ │                                  ┆ index_name: time_1            ┆ archetype: Points3D                                 ┆ archetype: Points3D                                 │ │
  │ │                                  ┆ kind: index                   ┆ component: Points3D:positions                       ┆ component: Points3D:positions                       │ │
  │ │                                  ┆                               ┆ component_type: Position3D                          ┆ component_type: Position3D                          │ │
  │ │                                  ┆                               ┆ entity_path: /obj1                                  ┆ entity_path: /obj2                                  │ │
  │ │                                  ┆                               ┆ kind: data                                          ┆ kind: data                                          │ │
  │ ╞══════════════════════════════════╪═══════════════════════════════╪═════════════════════════════════════════════════════╪═════════════════════════════════════════════════════╡ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:30:45.123456789 ┆ null                                                ┆ [[19.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:34:45.123456789 ┆ [[3.0, 0.0, 0.0]]                                   ┆ [[13.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:36:45.123456789 ┆ [[4.0, 0.0, 0.0]]                                   ┆ [[1.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:38:45.123456789 ┆ [[5.0, 0.0, 0.0]]                                   ┆ [[5.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:40:45.123456789 ┆ [[6.0, 0.0, 0.0]]                                   ┆ [[25.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:44:45.123456789 ┆ null                                                ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:46:45.123456789 ┆ null                                                ┆ [[22.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:48:45.123456789 ┆ null                                                ┆ [[9.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:50:45.123456789 ┆ null                                                ┆ [[2.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:52:45.123456789 ┆ [[12.0, 0.0, 0.0]]                                  ┆ [[4.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:00:45.123456789 ┆ null                                                ┆ [[20.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:02:45.123456789 ┆ [[17.0, 0.0, 0.0]]                                  ┆ [[17.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:04:45.123456789 ┆ [[18.0, 0.0, 0.0]]                                  ┆ [[21.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:12:45.123456789 ┆ null                                                ┆ [[14.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:14:45.123456789 ┆ null                                                ┆ [[8.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:16:45.123456789 ┆ [[24.0, 0.0, 0.0]]                                  ┆ [[18.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T11:18:45.123456789 ┆ [[25.0, 0.0, 0.0]]                                  ┆ [[23.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:30:45.123456789 ┆ null                                                ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:32:45.123456789 ┆ null                                                ┆ [[25.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:34:45.123456789 ┆ [[3.0, 0.0, 0.0]]                                   ┆ null                                                │ │
  │ └──────────────────────────────────┴───────────────────────────────┴─────────────────────────────────────────────────────┴─────────────────────────────────────────────────────┘ │
  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Data truncated due to size.
  '''
# ---
# name: test_dataframe_api_using_index_values.1
  '''
  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ METADATA:                                                                                                                                                                        │
  │ * version: 0.1.2                                                                                                                                                                 │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ ┌──────────────────────────────────┬───────────────────────────────┬─────────────────────────────────────────────────────┬─────────────────────────────────────────────────────┐ │
  │ │ rerun_segment_id                 ┆ time_1                        ┆ /obj1:Points3D:positions                            ┆ /obj2:Points3D:positions                            │ │
  │ │ ---                              ┆ ---                           ┆ ---                                                 ┆ ---                                                 │ │
  │ │ type: Utf8                       ┆ type: nullable Timestamp(ns)  ┆ type: nullable List[nullable FixedSizeList[f32; 3]] ┆ type: nullable List[nullable FixedSizeList[f32; 3]] │ │
  │ │                                  ┆ index_name: time_1            ┆ archetype: Points3D                                 ┆ archetype: Points3D                                 │ │
  │ │                                  ┆ kind: index                   ┆ component: Points3D:positions                       ┆ component: Points3D:positions                       │ │
  │ │                                  ┆                               ┆ component_type: Position3D                          ┆ component_type: Position3D                          │ │
  │ │                                  ┆                               ┆ entity_path: /obj1                                  ┆ entity_path: /obj2                                  │ │
  │ │                                  ┆                               ┆ kind: data                                          ┆ kind: data                                          │ │
  │ ╞══════════════════════════════════╪═══════════════════════════════╪═════════════════════════════════════════════════════╪═════════════════════════════════════════════════════╡ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:34:45.123456789 ┆ [[3.0, 0.0, 0.0]]                                   ┆ [[13.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:44:45.123456789 ┆ null                                                ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:40:45.123456789 ┆ [[6.0, 0.0, 0.0]]                                   ┆ null                                                │ │
  │ └──────────────────────────────────┴───────────────────────────────┴─────────────────────────────────────────────────────┴─────────────────────────────────────────────────────┘ │
  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  '''
# ---
# name: test_dataframe_api_using_index_values.2
  '''
  pyarrow.Table
  rerun_segment_id: string not null
  time_1: timestamp[ns]
  /obj1:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  /obj2:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  ----
  rerun_segment_id: [["3ee345b2e801448cace33a1097b9b49b","3ee345b2e801448cace33a1097b9b49b","68224eead5ed40838b3f3bdb0edfd2b2"]]
  time_1: [[2024-01-15 10:34:45.123456789,2024-01-15 10:44:45.123456789,2024-01-15 10:40:45.123456789]]
  /obj1:Points3D:positions: [[[[3,0,0]],null,[[6,0,0]]]]
  /obj2:Points3D:positions: [[[[13,1,0]],null,null]]
  '''
# ---
# name: test_dataframe_api_using_index_values_dataframe
  '''
  ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ METADATA:                                                                                                                  │
  │ * version: 0.1.2                                                                                                           │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ ┌──────────────────────────────────┬───────────────────────────────┬─────────────────────────────────────────────────────┐ │
  │ │ rerun_segment_id                 ┆ time_1                        ┆ /obj2:Points3D:positions                            │ │
  │ │ ---                              ┆ ---                           ┆ ---                                                 │ │
  │ │ type: Utf8                       ┆ type: nullable Timestamp(ns)  ┆ type: nullable List[nullable FixedSizeList[f32; 3]] │ │
  │ │                                  ┆ index_name: time_1            ┆ archetype: Points3D                                 │ │
  │ │                                  ┆ kind: index                   ┆ component: Points3D:positions                       │ │
  │ │                                  ┆                               ┆ component_type: Position3D                          │ │
  │ │                                  ┆                               ┆ entity_path: /obj2                                  │ │
  │ │                                  ┆                               ┆ kind: data                                          │ │
  │ ╞══════════════════════════════════╪═══════════════════════════════╪═════════════════════════════════════════════════════╡ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:30:45.123456789 ┆ [[38.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:32:45.123456789 ┆ [[35.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:34:45.123456789 ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:36:45.123456789 ┆ [[1.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:38:45.123456789 ┆ [[9.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:40:45.123456789 ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:42:45.123456789 ┆ [[33.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:44:45.123456789 ┆ [[25.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:48:45.123456789 ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:52:45.123456789 ┆ [[6.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:54:45.123456789 ┆ [[17.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:56:45.123456789 ┆ [[48.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:58:45.123456789 ┆ [[10.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:02:45.123456789 ┆ [[5.0, 1.0, 0.0]]                                   │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:04:45.123456789 ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:06:45.123456789 ┆ [[11.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:08:45.123456789 ┆ [[32.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:10:45.123456789 ┆ [[31.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:16:45.123456789 ┆ [[24.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:18:45.123456789 ┆ [[30.0, 1.0, 0.0]]                                  │ │
  │ └──────────────────────────────────┴───────────────────────────────┴─────────────────────────────────────────────────────┘ │
  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Data truncated due to size.
  '''
# ---
# name: test_dataframe_api_using_index_values_empty
  '''
  pyarrow.Table
  rerun_segment_id: string not null
  time_1: timestamp[ns]
  time_2: duration[ns]
  time_3: int64
  /obj1:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  /obj2:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  /obj3:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  /text1:TextDocument:text: list<item: string>
    child 0, item: string
  /text2:TextDocument:text: list<item: string>
    child 0, item: string
  ----
  rerun_segment_id: []
  time_1: []
  time_2: []
  time_3: []
  /obj1:Points3D:positions: []
  /obj2:Points3D:positions: []
  /obj3:Points3D:positions: []
  /text1:TextDocument:text: []
  /text2:TextDocument:text: []
  '''
# ---
# name: test_dataframe_api_using_index_values_same_indices_on_all_segments
  '''
  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ METADATA:                                                                                                                                                                        │
  │ * version: 0.1.2                                                                                                                                                                 │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ ┌──────────────────────────────────┬───────────────────────────────┬─────────────────────────────────────────────────────┬─────────────────────────────────────────────────────┐ │
  │ │ rerun_segment_id                 ┆ time_1                        ┆ /obj1:Points3D:positions                            ┆ /obj2:Points3D:positions                            │ │
  │ │ ---                              ┆ ---                           ┆ ---                                                 ┆ ---                                                 │ │
  │ │ type: Utf8                       ┆ type: nullable Timestamp(ns)  ┆ type: nullable List[nullable FixedSizeList[f32; 3]] ┆ type: nullable List[nullable FixedSizeList[f32; 3]] │ │
  │ │                                  ┆ index_name: time_1            ┆ archetype: Points3D                                 ┆ archetype: Points3D                                 │ │
  │ │                                  ┆ kind: index                   ┆ component: Points3D:positions                       ┆ component: Points3D:positions                       │ │
  │ │                                  ┆                               ┆ component_type: Position3D                          ┆ component_type: Position3D                          │ │
  │ │                                  ┆                               ┆ entity_path: /obj1                                  ┆ entity_path: /obj2                                  │ │
  │ │                                  ┆                               ┆ kind: data                                          ┆ kind: data                                          │ │
  │ ╞══════════════════════════════════╪═══════════════════════════════╪═════════════════════════════════════════════════════╪═════════════════════════════════════════════════════╡ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:34:45.123456789 ┆ [[3.0, 0.0, 0.0]]                                   ┆ [[13.0, 1.0, 0.0]]                                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 3ee345b2e801448cace33a1097b9b49b ┆ 2024-01-15T10:44:45.123456789 ┆ null                                                ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:34:45.123456789 ┆ [[3.0, 0.0, 0.0]]                                   ┆ null                                                │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ 68224eead5ed40838b3f3bdb0edfd2b2 ┆ 2024-01-15T10:44:45.123456789 ┆ [[8.0, 0.0, 0.0]]                                   ┆ [[5.0, 1.0, 0.0]]                                   │ │
  │ └──────────────────────────────────┴───────────────────────────────┴─────────────────────────────────────────────────────┴─────────────────────────────────────────────────────┘ │
  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  '''
# ---
# name: test_dataframe_api_using_index_values_same_indices_on_all_segments.1
  '''
  pyarrow.Table
  rerun_segment_id: string not null
  time_1: timestamp[ns]
  /obj1:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  /obj2:Points3D:positions: list<item: fixed_size_list<item: float not null>[3]>
    child 0, item: fixed_size_list<item: float not null>[3]
        child 0, item: float not null
  ----
  rerun_segment_id: [["3ee345b2e801448cace33a1097b9b49b","3ee345b2e801448cace33a1097b9b49b","68224eead5ed40838b3f3bdb0edfd2b2","68224eead5ed40838b3f3bdb0edfd2b2"]]
  time_1: [[2024-01-15 10:34:45.123456789,2024-01-15 10:44:45.123456789,2024-01-15 10:34:45.123456789,2024-01-15 10:44:45.123456789]]
  /obj1:Points3D:positions: [[[[3,0,0]],null,[[3,0,0]],[[8,0,0]]]]
  /obj2:Points3D:positions: [[[[13,1,0]],null,null,[[5,1,0]]]]
  '''
# ---
# name: test_dataset_view_filter_contents
  '''
  /obj1:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj1'
      b'rerun:kind': b'data'
  /obj2:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj2'
      b'rerun:kind': b'data'
  /obj3:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj3'
      b'rerun:kind': b'data'
  /text1:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text1'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  /text2:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text2'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun.controls.RowId:
      b'ARROW:extension:metadata': b'{"namespace":"row"}'
      b'ARROW:extension:name': b'rerun.datatypes.TUID'
      b'rerun:kind': b'control'
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_filter_contents.1
  '''
  /obj1:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj1'
      b'rerun:kind': b'data'
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun.controls.RowId:
      b'ARROW:extension:metadata': b'{"namespace":"row"}'
      b'ARROW:extension:name': b'rerun.datatypes.TUID'
      b'rerun:kind': b'control'
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_filter_contents_empty_list
  '''
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun.controls.RowId:
      b'ARROW:extension:metadata': b'{"namespace":"row"}'
      b'ARROW:extension:name': b'rerun.datatypes.TUID'
      b'rerun:kind': b'control'
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_filter_contents_empty_list.1
  '''
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun_segment_id:
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_filter_contents_nonexistent_path
  '''
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun.controls.RowId:
      b'ARROW:extension:metadata': b'{"namespace":"row"}'
      b'ARROW:extension:name': b'rerun.datatypes.TUID'
      b'rerun:kind': b'control'
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_filter_contents_nonexistent_path.1
  '''
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun_segment_id:
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_no_filter_contents
  '''
  /obj1:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj1'
      b'rerun:kind': b'data'
  /obj2:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj2'
      b'rerun:kind': b'data'
  /obj3:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj3'
      b'rerun:kind': b'data'
  /text1:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text1'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  /text2:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text2'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun.controls.RowId:
      b'ARROW:extension:metadata': b'{"namespace":"row"}'
      b'ARROW:extension:name': b'rerun.datatypes.TUID'
      b'rerun:kind': b'control'
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_no_filter_contents.1
  '''
  /obj1:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj1'
      b'rerun:kind': b'data'
  /obj2:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj2'
      b'rerun:kind': b'data'
  /obj3:Points3D:positions:
      b'rerun:archetype': b'rerun.archetypes.Points3D'
      b'rerun:component': b'Points3D:positions'
      b'rerun:component_type': b'rerun.components.Position3D'
      b'rerun:entity_path': b'/obj3'
      b'rerun:kind': b'data'
  /text1:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text1'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  /text2:TextDocument:text:
      b'rerun:archetype': b'rerun.archetypes.TextDocument'
      b'rerun:component': b'TextDocument:text'
      b'rerun:component_type': b'rerun.components.Text'
      b'rerun:entity_path': b'/text2'
      b'rerun:is_static': b'true'
      b'rerun:kind': b'data'
  log_tick:
      b'rerun:index_name': b'log_tick'
      b'rerun:kind': b'index'
  log_time:
      b'rerun:index_name': b'log_time'
      b'rerun:kind': b'index'
  rerun_segment_id:
  time_1:
      b'rerun:index_name': b'time_1'
      b'rerun:kind': b'index'
  time_2:
      b'rerun:index_name': b'time_2'
      b'rerun:kind': b'index'
  time_3:
      b'rerun:index_name': b'time_3'
      b'rerun:kind': b'index'
  
  '''
# ---
# name: test_dataset_view_reader
  '''
  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ METADATA:                                                                                                                                                                                                                           │
  │ * version: 0.1.2                                                                                                                                                                                                                    │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ ┌─────────────────────────────────────────────────────┬──────────────────────┬──────────────────────────────┬──────────────────────────────────┬───────────────────────────────┬─────────────────────────────┬────────────────────┐ │
  │ │ /obj1:Points3D:positions                            ┆ log_tick             ┆ log_time                     ┆ rerun_segment_id                 ┆ time_1                        ┆ time_2                      ┆ time_3             │ │
  │ │ ---                                                 ┆ ---                  ┆ ---                          ┆ ---                              ┆ ---                           ┆ ---                         ┆ ---                │ │
  │ │ type: nullable List[nullable FixedSizeList[f32; 3]] ┆ type: nullable i64   ┆ type: nullable Timestamp(ns) ┆ type: Utf8                       ┆ type: nullable Timestamp(ns)  ┆ type: nullable Duration(ns) ┆ type: nullable i64 │ │
  │ │ archetype: Points3D                                 ┆ index_name: log_tick ┆ index_name: log_time         ┆                                  ┆ index_name: time_1            ┆ index_name: time_2          ┆ index_name: time_3 │ │
  │ │ component: Points3D:positions                       ┆ kind: index          ┆ kind: index                  ┆                                  ┆ kind: index                   ┆ kind: index                 ┆ kind: index        │ │
  │ │ component_type: Position3D                          ┆                      ┆                              ┆                                  ┆                               ┆                             ┆                    │ │
  │ │ entity_path: /obj1                                  ┆                      ┆                              ┆                                  ┆                               ┆                             ┆                    │ │
  │ │ kind: data                                          ┆                      ┆                              ┆                                  ┆                               ┆                             ┆                    │ │
  │ ╞═════════════════════════════════════════════════════╪══════════════════════╪══════════════════════════════╪══════════════════════════════════╪═══════════════════════════════╪═════════════════════════════╪════════════════════╡ │
  │ │ [[1.0, 0.0, 0.0]]                                   ┆ 25                   ┆ 2025-11-03T20:35:21.079952   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:30:45.123456789 ┆ PT12900S                    ┆ 46                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[2.0, 0.0, 0.0]]                                   ┆ 34                   ┆ 2025-11-03T20:35:21.080080   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:32:45.123456789 ┆ PT12000S                    ┆ 6                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[3.0, 0.0, 0.0]]                                   ┆ 96                   ┆ 2025-11-03T20:35:21.080980   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:34:45.123456789 ┆ PT9900S                     ┆ 30                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[4.0, 0.0, 0.0]]                                   ┆ 86                   ┆ 2025-11-03T20:35:21.080836   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:36:45.123456789 ┆ PT1800S                     ┆ 50                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[5.0, 0.0, 0.0]]                                   ┆ 41                   ┆ 2025-11-03T20:35:21.080180   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:38:45.123456789 ┆ PT4200S                     ┆ 15                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[6.0, 0.0, 0.0]]                                   ┆ 97                   ┆ 2025-11-03T20:35:21.080997   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:40:45.123456789 ┆ PT13500S                    ┆ 9                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[7.0, 0.0, 0.0]]                                   ┆ 31                   ┆ 2025-11-03T20:35:21.080037   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:42:45.123456789 ┆ PT11400S                    ┆ 47                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[8.0, 0.0, 0.0]]                                   ┆ 54                   ┆ 2025-11-03T20:35:21.080362   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:44:45.123456789 ┆ PT9000S                     ┆ null               │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[10.0, 0.0, 0.0]]                                  ┆ 82                   ┆ 2025-11-03T20:35:21.080779   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:48:45.123456789 ┆ null                        ┆ 27                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[12.0, 0.0, 0.0]]                                  ┆ 72                   ┆ 2025-11-03T20:35:21.080635   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:52:45.123456789 ┆ PT3300S                     ┆ 10                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[13.0, 0.0, 0.0]]                                  ┆ 75                   ┆ 2025-11-03T20:35:21.080678   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:54:45.123456789 ┆ PT6600S                     ┆ 12                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[14.0, 0.0, 0.0]]                                  ┆ 17                   ┆ 2025-11-03T20:35:21.079838   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:56:45.123456789 ┆ PT15900S                    ┆ 17                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[15.0, 0.0, 0.0]]                                  ┆ 9                    ┆ 2025-11-03T20:35:21.079716   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T10:58:45.123456789 ┆ PT4500S                     ┆ 21                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[17.0, 0.0, 0.0]]                                  ┆ 69                   ┆ 2025-11-03T20:35:21.080591   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:02:45.123456789 ┆ PT3000S                     ┆ 5                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[18.0, 0.0, 0.0]]                                  ┆ 62                   ┆ 2025-11-03T20:35:21.080486   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:04:45.123456789 ┆ PT9600S                     ┆ 8                  │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[19.0, 0.0, 0.0]]                                  ┆ 46                   ┆ 2025-11-03T20:35:21.080249   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:06:45.123456789 ┆ PT4800S                     ┆ 34                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[20.0, 0.0, 0.0]]                                  ┆ 57                   ┆ 2025-11-03T20:35:21.080412   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:08:45.123456789 ┆ PT11100S                    ┆ 13                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[21.0, 0.0, 0.0]]                                  ┆ 114                  ┆ 2025-11-03T20:35:21.081240   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:10:45.123456789 ┆ null                        ┆ null               │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[24.0, 0.0, 0.0]]                                  ┆ 91                   ┆ 2025-11-03T20:35:21.080911   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:16:45.123456789 ┆ PT8700S                     ┆ 40                 │ │
  │ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
  │ │ [[25.0, 0.0, 0.0]]                                  ┆ 38                   ┆ 2025-11-03T20:35:21.080138   ┆ 141a866deb2d49f69eb3215e8a404ffc ┆ 2024-01-15T11:18:45.123456789 ┆ PT10500S                    ┆ 3                  │ │
  │ └─────────────────────────────────────────────────────┴──────────────────────┴──────────────────────────────┴──────────────────────────────────┴───────────────────────────────┴─────────────────────────────┴────────────────────┘ │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Data truncated due to size.
  '''
# ---
